--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -174,13 +174,17 @@ header{
     font-size: 3em;
     color: #707070;
 }
-
+.section2{
+    width: 100%;
+    height: 100vh;
+}
 .description-title{
     display: flex;
     width: 30%;
     height: 100px;
     margin-left: 2%;
     align-items: center;
+    margin-top: 10%;
 }
 .description-title-logo{
     width: 50px;
@@ -213,21 +217,24 @@ footer{
 }
 
 .footer-right{
+    width: 40%;
     float: right;
     height: 100%;
     align-items: center;
 }
 nav{
     align-self: center;
+    height: 100%;
 }
 .footer-nav{
     display:flex;
     flex-wrap: wrap;
-    height: 25vh;
-    align-items: center;
+    list-style: none;
+    height: 50%;
+    margin-top: 10%;
 }
 
 .footer-nav-item{
-    width: 50%;
+    width: 30%;
     margin-top: 1%;
 }
