--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -134,11 +134,11 @@ header{
     align-items: center;    
 }
 .header-logo{
-    width: 50px;
-    width: 50px;
+    width: 3vw;
+    width: 3vw;
 }
 .header-title{
-    font-size: 30px;
+    font-size: 3vw;
     margin-left: 3%;
 }
 
@@ -146,11 +146,13 @@ header{
     display: flex;
     width: 100%;
     
+    
 }
 .header-nav-item{
     display: flex;
     margin: 0 1.5%;
     text-align: center;
+    font-size: 1vw;
 }
 
 .main-capture{
@@ -171,12 +173,12 @@ header{
     width: 100%;
     top: 50%;
     text-align: center;
-    font-size: 3em;
+    font-size: 3vw;
     color: #707070;
 }
 .section2{
     width: 100%;
-    height: 100vh;
+    height: 1000px;
 }
 .description-title{
     display: flex;
@@ -192,14 +194,14 @@ header{
 }
 h2{
     color: #FFBD3A;
-    font-size: 2em;
+    font-size: 2vw;
     margin-left: 3%;
 }
 
 .site-description{
     line-height: 5em;
     margin-left: 2%;
-    font-size: 1.2em;
+    font-size: 1.3vw;
 }
 
 .site-description-button{
@@ -208,6 +210,7 @@ h2{
     width: 20%;
     height: 5%;
     margin-left: 40%;
+    font-size: 1vw;
 }
 
 footer{
@@ -247,4 +250,5 @@ nav{
 .footer-nav-item{
     width: 30%;
     margin-top: 1%;
+    font-size: 1vw;
 }
