--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -162,12 +162,11 @@ body{
 /* フッター */
 
 footer{
-    width: 100%;
-    height: 25vh;
+    width: 100vw;
+    height: 20vh;
     background-color: #F8B600;
     color: #707070;
-    position: fixed;
-    bottom:0;
+    margin-top: 50px;
 }
 
 .footer-left{
