--- a/src/public/css/post.css
+++ b/src/public/css/post.css
@@ -19,3 +19,12 @@ input{
     width: 400px;
     margin: 0 auto;
 }
+
+.imagePreview {
+    width: 100%;
+    height: 180px;
+    background-position: center center;
+    background-size: cover;
+    -webkit-box-shadow: 0 0 1px 1px rgba(0, 0, 0, .3);
+    display: inline-block;
+}
