--- a/src/public/css/post.css
+++ b/src/public/css/post.css
@@ -28,3 +28,7 @@ input{
     -webkit-box-shadow: 0 0 1px 1px rgba(0, 0, 0, .3);
     display: inline-block;
 }
+
+.error-meesage{
+    color: brown;
+}
